# schnapps-superbuild

./: CMakeLists.txt  appveyor.yml
packaging/: CMakeLists.txt
